src/snapshots/blog__snapshot@inside-rust__2019__10__22__infra-team-meeting.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2019/10/22/infra-team-meeting.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>2019-10-22 Infrastructure Team Meeting | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="2019-10-22 Infrastructure Team Meeting | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="2019-10-22 Infrastructure Team Meeting | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="2019-10-22 Infrastructure Team Meeting" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>2019-10-22 Infrastructure Team Meeting</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Oct. 22, 2019 &middot; Pietro Albini
     on behalf of <a href="https://www.rust-lang.org/governance/teams/operations#infra">the infrastructure team</a> 
    </div>

    <div class="post">
      <p>Meeting run by pietroalbini. Mintues written by pietroalbini.<br />
Attending: aidanhs, alexcrichton, kennytm, Mark-Simulacrum, pietroalbini,
shepmaster<br />
<a href="https://discordapp.com/channels/442252698964721669/443148319431065610/636247640794857472">Start of the conversation</a></p>
<h2><a href="#news-from-the-team" aria-hidden="true" class="anchor" id="news-from-the-team"></a>News from the team</h2>
<ul>
<li>All the AWS resources related to the bastion are now managed with Terraform.
The documentation on <a href="https://github.com/rust-lang/infra-team/blob/master/docs/hosts/bastion.md#updating-the-whitelisted-ips">how to add whitelisted IPs</a> has
also been updated.</li>
<li>Crater agents are now deployed with Ansible, and the related AWS resources
are now managed with Terraform. Agents are configured to check for updates
every 5 minutes.</li>
<li>There was an outage of docs.rs on Sunday night, the postmortem is going to be
published soon on the &quot;Inside Rust&quot; blog and work on the action items from it
is ongoing.</li>
</ul>
<h2><a href="#putting-a-cdn-in-front-of-the-ci-s3-buckets-pietroalbini" aria-hidden="true" class="anchor" id="putting-a-cdn-in-front-of-the-ci-s3-buckets-pietroalbini"></a>Putting a CDN in front of the CI S3 buckets (pietroalbini)</h2>
<p>After an audit of our bandwidth usage for the <code>rust-lang-ci-sccache2</code> and
<code>rust-lang-ci-mirrors</code> S3 buckets we discovered CI is pulling respectively 8.3
TB and 1.4 TB from them each month. Egress from S3 is pricey (0.09$/GB), while
for us egress from CloudFront is way cheaper (0.04$/month, as across all of our
distributions we transfer out more than 150 TB each month). Putting CloudFront
in front of them is going to save us an estimate of 485$/month.</p>
<p>Thankfully all the data in those buckets is immutable (mirrors are versioned
and all caches are addressed by hash), so there are not going to be any
problems due to cache invalidation. Sccache doesn’t support querying a CDN yet
but aidanhs is going to write some pointers and pietroalbini is going to do the
implementation work. The caches CDN is also going to query a new
<code>rust-lang-ci-caches</code> bucket, to avoid the old naming scheme.</p>
<p>pietroalbini already setup
<a href="https://ci-mirrors.rust-lang.org">ci-mirrors.rust-lang.org</a>, and is going to
do the implementation work to both create a CDN distribution for caches and
switch the CI to query the CDN.</p>
<h2><a href="#moving-infra-documentation-to-the-forge-pietroalbini" aria-hidden="true" class="anchor" id="moving-infra-documentation-to-the-forge-pietroalbini"></a>Moving infra documentation to the forge (pietroalbini)</h2>
<p>There is an effort in the project to centralize all the internal documentation
<a href="https://forge.rust-lang.org">on the forge</a>. pietroalbini proposed to move all
the infra team documentation to it. Everyone agreed, as we find value in having
everything reachable in a single place. aidanhs pointed out that meeting
minutes should not be migrated on the forge.</p>
<h2><a href="#next-meeting-time" aria-hidden="true" class="anchor" id="next-meeting-time"></a>Next meeting time</h2>
<p>Europe will switch DST next week, so the next meeting will be at -1 hours for
europeans and at the same time for everyone else on the team.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
